Changelog for Loginza

1.2.0 (20.08.1012)
==============
- Now you can use field username as you want. Authorization now works through remote_key field in modUser.
- Automatic convertation old usernames (hashes) to normal nicknames and create of remote_key. User now can change his username.
- Now you can use placeholders of modUser in tplLogout chunk.
- Snippet now supports non-friendly urls (index.php?id=*).


1.1.1 pl (03.05.2012)
==============
- Security fixes


1.1.0 pl (17.02.2012)
==============
- The chunks are no longer overwritten when you upgrade the package.
- New parameter &updateProfile. If 1 - user profile will be updated on each login with info from remote service. If 0 - not updated. By default it is set to 1.

1.0.0 pl (25.01.2012)
==============
- Add package _build
- Source code moved to Github


1.0.0 beta1 (30.11.2011)
==============
- First public release