@@ -2,8 +2,8 @@
 require MODX_CORE_PATH.'model/modx/processors/security/user/update.class.php';
 
 class LoginzaUpdateProcessor extends modUserUpdateProcessor {
-	var $permission = '';
-
+	public $permission = '';
+	
 	public function initialize() {
 		$this->setProperty('id', $this->modx->user->id);
 
